--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^2.2.0"
 datasets = "^2.17.0"
 jiwer = "^3.0.3"
 scikit-learn = "^1.4.0"
+evaluate = "^0.4.1"
 
 
 [[tool.poetry.source]]
