--- a/requirements.txt
+++ b/requirements.txt
@@ -326,6 +326,9 @@ defusedxml==0.7.1 ; python_version >= "3.10" and python_version < "4.0" \
 dill==0.3.8 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:3ebe3c479ad625c4553aca177444d89b486b1d84982eeacded644afc0cf797ca \
     --hash=sha256:c36ca9ffb54365bdd2f8eb3eff7d2a21237f8452b57ace88b1ac615b7e815bd7
+evaluate==0.4.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:3ff079ab09572c0a2c1e6d749887c19f6783ab993320412cd39f6fe501d28510 \
+    --hash=sha256:d721d9f2059ced79770d8a0509e954fbd1bbac96a8f9160e29888d8073cda3d9
 exceptiongroup==1.2.0 ; python_version >= "3.10" and python_version < "3.11" \
     --hash=sha256:4bfd3996ac73b41e9b9628b04e079f193850720ea5945fc96a08633c66912f14 \
     --hash=sha256:91f5c769735f051a4290d52edd0858999b57e5876e9f85937691bd4c9fa3ed68
@@ -1344,6 +1347,9 @@ regex==2023.12.25 ; python_version >= "3.10" and python_version < "4.0" \
 requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:58cd2187c01e70e6e26505bca751777aa9f2ee0b7f4300988b709f44e013003f \
     --hash=sha256:942c5a758f98d790eaed1a29cb6eefc7ffb0d1cf7af05c3d2791656dbd6ad1e1
+responses==0.18.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:15c63ad16de13ee8e7182d99c9334f64fd81f1ee79f90748d527c28f7ca9dd51 \
+    --hash=sha256:380cad4c1c1dc942e5e8a8eaae0b4d4edf708f4f010db8b7bcfafad1fcd254ff
 rfc3339-validator==0.1.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:138a2abdf93304ad60530167e51d2dfb9549521a836871b88d7f4695d0022f6b \
     --hash=sha256:24f6ec1eda14ef823da9e36ec7113124b39c04d50a4d3d3a3c2859577e7791fa
