--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ datasets = "^2.17.0"
 jiwer = "^3.0.3"
 scikit-learn = "^1.4.0"
 evaluate = "^0.4.1"
+lightning = "^2.2.1"
 
 
 [[tool.poetry.source]]
